fix(ui5-slider, ui5-range-slider): persist tooltip visible on hover (#12383)
fix(ui5-slider): persist tooltip visible on hover

Fixes: #12329

--- a/packages/main/src/themes/SliderTooltip.css
+++ b/packages/main/src/themes/SliderTooltip.css
@@ -24,7 +24,7 @@
 	height: fit-content;
 	border: none;
 	padding: 0;
-	margin-top: -3.25rem;
+	margin-top: -3rem;
 	box-shadow: none;
 }
 
